[package]
name = "ultor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
serenity = "0.12"
env_logger = "0.11.6"
log = "0.4.24"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "postgres", "uuid"]}
uuid = { version = "1.22.0", features = ["v4"] } 
reqwest = { version =  "0.12.15", features = ["json"] }
rand = "0.9.0"
